* Added jest testing * Fix image slideshow not updating state * Trying to get image border to stay fixed on transitions * Fix publish date not showing

--- a/styles.scss
+++ b/styles.scss
@@ -246,6 +246,7 @@ body {
 
 					border: 12px $separator-border-style $separator-border-color;
 					border-radius: 12px;
+					background-color: $separator-border-color;
 
 					img {
 						width: 500px;
